--- a/magic-glow-server/package.json
+++ b/magic-glow-server/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "server",
+  "name": "magic-glow-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.35",
+    "ws": "^8.17.0"
   }
 }
